src/test/gitops/gitopsa.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    choerodon.io/network-service-instances: insgitopsa
  labels:
    choerodon.io/network: service
  name: svcgitopsa
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: {}
  labels:
    choerodon.io/network: ingress
  name: inggitopsa
spec:
  rules:
  - host: devopss-service1-front.staging.saas.hand-china.com
    http:
      paths:
      - backend:
          serviceName: svcgitopsa
          servicePort: 8060
        path: /
