src/test/gitops/gitopsb.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    choerodon.io/network-service-instances: insgitopsb
  labels:
    choerodon.io/network: service
  name: svcgitopsb
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  sessionAffinity: None
  type: ClusterIP


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: {}
  labels:
    choerodon.io/network: ingress
  name: inggitopsb
spec:
  rules:
    - host: devopsasa-service1-front.staging.saas.test.com
      http:
        paths:
          - backend:
              serviceName: svcgitopsb
              servicePort: 8060
            path: /
