src/test/gitops/gitopsc.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    choerodon.io/network-service-instances: instest1
  labels:
    choerodon.io/network: service
  name: svcgitopsc
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  sessionAffinity: None
  type: ClusterIP


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: {}
  labels:
    choerodon.io/network: ingress
  name: inggitopsc
spec:
  rules:
    - host: devops-serviceasas-front.staging.saas.hand-china.com
      http:
        paths:
          - backend:
              serviceName: svctest1
              servicePort: 8060
            path: /
