src/test/gitops/test3.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    choerodon.io/network-service-instances: instest3
  labels:
    choerodon.io/network: service
  name: svctest3
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: {}
  labels:
    choerodon.io/network: ingress
  name: ingtest3
spec:
  rules:
  - host: devops-service3-front.staging.saas.hand-china.com
    http:
      paths:
      - backend:
          serviceName: svctest3
          servicePort: 8060
        path: /
