src/test/gitops/test7.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: {}
  labels:
    choerodon.io/network: ingress
  name: ingtest2
spec:
  rules:
  - host: devops-service2-front.staging.saas.hand-china.com
    http:
      paths:
      - backend:
          serviceName: svctest2
          servicePort: 8060
        path: /
